Prevent overflows

--- a/css/page.css
+++ b/css/page.css
@@ -151,23 +151,7 @@ input[type="password"] {
   text-align: left;
   margin: 30px auto;
   display: none;
-}
-
-.actors-slot{
-  border-radius: 6px;
-  border: dotted 1px #a7a7a7;
-  padding: 30px;
-  background: #fff;
-}
-
-td {
-  vertical-align: top;
-  padding: 0 60px 0 0;
-}
-
-th {
-  color: #676767;
-  font-weight: 400;
+  position: relative;
 }
 
 ul.parent li {
@@ -381,20 +365,12 @@ ul.parent li .very-unlikely {
   color: #646667;
 }
 
-h2 {
-  font-weight: 200;
-  font-size: 16px;
-  line-height: 24px;
-  color: #103d52;
-}
-
 .loader{
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(52, 54, 55, 0.2);
   display: none;
 }
 
@@ -418,4 +394,50 @@ h2 {
 
 .lift-neg {
   display: list-item;
+}
+
+table{
+  background: #fff;
+  border-radius: 6px;
+  border: dotted 1px #a7a7a7;
+  padding: 30px;
+  background: #fff;
+  margin: 0 auto;
+  min-width: 200px;
+}
+
+td {
+  vertical-align: top;
+}
+
+td:not(.level-1),
+th:not(.level-1){
+  padding: 0 0 0 60px;
+}
+
+td:empty,
+th:empty{
+  padding: 0;
+}
+
+th {
+  color: #676767;
+  font-weight: 400;
+}
+
+caption {
+  font-weight: 200;
+  font-size: 16px;
+  line-height: 24px;
+  color: #103d52;
+  text-align: left;
+  position: relative;
+}
+
+.lift-toggle{
+  position: absolute;
+  top: 2px;
+  right: 0;
+  font-size: 11px;
+  color: #676767;
 }
